Listing files from mch repositories